# babyrobots

./: .gitignore  package.json  tailwind.config.js
.next/: trace
.next/cache/: .rscinfo
.next/server/: _error.js
.next/server/pages/: _app.js  _error.js  index.js
.next/server/vendor-chunks/: @swc.js  next.js
.next/static/chunks/: _error.js  react-refresh.js  webpack.js
Desktop/babyrobots-main/: jest.config.js  jest.setup.js  package-lock.json  package.json
Desktop/indii-music-babyrobots/: .env.example  .gitignore  Art_Creation_Integration_Plan.md  CLEANUP_COMPLETED.md  CONTEXT_ENGINEERING_IMPLEMENTATION_PLAN.md  CORE_DATABASE_SETUP_COMPLETE.md  DEPLOYMENT_COMPLETE.md  FIX_SUMMARY.md  FRANKEN_UI_INTEGRATION_TASKS.md  INDII_MUSIC_CORE_MISSION.md  MARKDOWN_VALIDATION_COMPLETE.md  README.md  REPOSITORY_STATUS_FINAL.md  SUPABASE_SETUP_COMPLETE.md  TEAM_NOTES_SUPABASE_INTEGRATION.md  TESTING_ISSUES.md  TESTING_RESOLUTION_SUMMARY.md  TODO.md  TODO_CONSOLIDATED.md  TODO_DB.md  UIUX_Improvement_Plan.md  UI_Enhancement_Roadmap.md  aura_build_quick_start_prompt.md  aura_build_ui_prompt.md  context_engineering.md  crash-memory.db  database.sqlite  database.sqlite-shm  database.sqlite-wal  debug-endpoints.js  desktop-setup.md  franken_ui_notes.md  indii-music.db  indii-music.db.backup  jest.config.js  jest.polyfills.js  jest.setup.js  main.py  memory_hub.py  my_current_task.md  (+12 more)
Desktop/indii-music-babyrobots/desktop/src-tauri/: Cargo.toml  tauri.conf.json
src/lib/: ai-router.js  knowledge-base.js  roles.js
src/pages/: index.js
src/styles/: globals.css
(+231 files in other folders)
