[package]
name = "indii-music"
version = "1.0.0"
description = "Professional music platform for artists, licensors, and fans"
authors = ["Indii Music Team"]
license = "MIT"
repository = "https://github.com/thewalkeragency/babyrobots"
edition = "2021"

[build-dependencies]
tauri-build = { version = "2.0", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
tauri = { version = "2.0", features = ["macos-private-api"] }

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
